2016-05-07  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Another try to implement `faceRequester'.

	* src/ftinspect.h (FaceID): Extend structure to make it suitable as
	key to Qt's `QHash' class.
	(qHash): Also needed for `QHash'.
	(MainGUI): Provide running ID number in `maxFaces'.
	New `faceIDHash' to map between (font,face,instance) index triplets
	and IDs.

	* src/ftinspect.cpp (FaceID::FaceID, FaceID::operator==, qHash):
	Implement.
	(faceRequester): Use `faceIDHash'.
	(MainGUI::showFont): Fill `faceIDHash'.
	(MainGUI::setDefaults): Updated.

2016-05-06  Werner Lemberg  <wl@gnu.org>

	* src/ftinspect.cpp (MainGUI::showFont): Fix logic.

2016-05-06  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Simplify code.

	* src/ftinspect.cpp (MainGUI::createConnections,
	MainGUI::createActions): Use `connect' variant that doesn't need
	`this' parameter.

2016-05-06  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Compute load flags for `FT_Load_Glyph'.

	* src/ftinspect.cpp (Engine::update): Compute `doHinting' and
	`doAutoHinting', and `loadFlags'.

	* src/ftinspect.h (Engine): Updated.

2016-05-06  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Add general hinting check button.

	* src/ftinspect.cpp (MainGUI::checkHinting): New method.
	(MainGUI::createLayout, MainGUI::createConnections,
	MainGUI::setDefaults): Updated.
	(MainGUI::checkAutoHinting): Also handle `hintingModeLabel'.

	* src/ftinspect.h: Updated.

2016-05-06  Werner Lemberg  <wl@gnu.org>

	[ftinspect] More gamma slider settings.

	* src/ftinspect.cpp (MainGUI::createLayout): Set gamma slider tick
	intervals.

	(MainGUI::setDefaults): Set default value for gamma slider.
	Also move other spin box default values to this function.

2016-05-06  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Handle LCD filter change.

	* src/ftinspect.cpp (MainGUI::checkLcdFilter): New method.
	(MainGUI::setDefaults): Set up LCD filter mapping.
	Call `checkLcdFilter'.
	(MainGUI::createConnections): Register `checkLcdFilter'.
