@@ -69,7 +69,7 @@ struct Font
 
 // This structure is used to map the (font,face,instance) index triplet to
 // abstract IDs (generated by a running number stored in MainGUI's
-// `maxFaces' member).
+// `faceCounter' member).
 //
 // Qt's `QHash' class needs an implementation of `==' and a global,
 // overloaded `qHash' function.
@@ -217,7 +217,7 @@ private:
   int currentFaceIndex;
   int currentInstanceIndex;
 
-  int maxFaces; // a running number used to initialize `faceIDHash'
+  int faceCounter; // a running number used to initialize `faceIDHash'
   QHash<FaceID, int> faceIDHash;
 
   // layout related stuff
